traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:14: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:17: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:20: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:23: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:26: error: Unmatched closing brace '}' ignored here
}
^